fable/test/syntax_error/bad_not_2.f
      program prog
      logical a, b
      a = 1 .not. b
      end
